--- a/angular.json
+++ b/angular.json
@@ -26,11 +26,13 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/bootstrap/dist/css/bootstrap-grid.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/baguettebox.js/dist/baguetteBox.min.css",
               "src/styles.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/baguettebox.js/dist/baguetteBox.min.js"
             ]
           },
           "configurations": {
