--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "ng2-simple-timer": "^1.3.3",
     "ngx-lazy-load-images": "^1.3.1",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
